HtGFW_dev/logs/log_1.2.txt
2018-04-26 02:59:01.422339
Traceback (most recent call last):
  File "printChecker_2.py", line 8, in <module>
    check = checker2.check()
NameError: name 'checker2' is not defined
2018-04-26 03:59:01.703364
Traceback (most recent call last):
  File "printChecker_2.py", line 8, in <module>
    check = checker2.check()
NameError: name 'checker2' is not defined
  File "printChecker_2.py", line 7
    print str(now)
        ^
SyntaxError: invalid syntax
  File "printChecker_1.py", line 7
    print str(now)
        ^
SyntaxError: invalid syntax
2018-04-26 09:37:02.118948
CHECKING TOPIC: 20023724
CHECKING TOPIC: 19614354
CHECKING TOPIC: 19836561
CHECKING TOPIC: 19556339
CHECKING TOPIC: 19603827
CHECKING TOPIC: 19578404
CHECKING TOPIC: 19638541
CHECKING TOPIC: 19604890
answer : 404 : https://www.zhihu.com/question/271387092/answer/361160051

answer : 404 : https://www.zhihu.com/question/271279709/answer/360454377

answer : 404 : https://www.zhihu.com/question/271279709/answer/360329435

answer : 404 : https://www.zhihu.com/question/271279709/answer/360294327

question : 404 : https://www.zhihu.com/question/271387092

answer : 404 : https://www.zhihu.com/question/271387092/answer/361208287

answer : 404 : https://www.zhihu.com/question/271279709/answer/360476273

question : 404 : https://www.zhihu.com/question/271279709

CHECKING TOPIC: 19551086
question : 404 : https://www.zhihu.com/question/270415168

question : 404 : https://www.zhihu.com/question/270621469

answer : 404 : https://www.zhihu.com/question/270415168/answer/360139666

answer : 404 : https://www.zhihu.com/question/270621469/answer/360779666

CHECKING TOPIC: 19550613
answer : 404 : https://www.zhihu.com/question/270415168/answer/360451509

question : 404 : https://www.zhihu.com/question/270415168

answer : 404 : https://www.zhihu.com/question/270415168/answer/359825126

question : 404 : https://www.zhihu.com/question/270621469

answer : 404 : https://www.zhihu.com/question/270621469/answer/360981750

answer : 404 : https://www.zhihu.com/question/270415168/answer/360528557

answer : 404 : https://www.zhihu.com/question/270415168/answer/360531602

answer : 404 : https://www.zhihu.com/question/270415168/answer/360585851

answer : 404 : https://www.zhihu.com/question/270415168/answer/360130655

answer : 404 : https://www.zhihu.com/question/270621469/answer/360327135

answer : 404 : https://www.zhihu.com/question/270415168/answer/361272841

answer : 404 : https://www.zhihu.com/question/270415168/answer/360139666

answer : 404 : https://www.zhihu.com/question/270621469/answer/360779666

CHECKING TOPIC: 20072490
answer : 404 : https://www.zhihu.com/question/270415168/answer/360451509

question : 404 : https://www.zhihu.com/question/270415168

article : 404 : https://zhuanlan.zhihu.com/p/35373185

answer : 404 : https://www.zhihu.com/question/270415168/answer/359825126

question : 404 : https://www.zhihu.com/question/270621469

answer : 404 : https://www.zhihu.com/question/270621469/answer/360981750

answer : 404 : https://www.zhihu.com/question/270415168/answer/360528557

answer : 404 : https://www.zhihu.com/question/270415168/answer/360531602

answer : 404 : https://www.zhihu.com/question/270415168/answer/360585851

answer : 404 : https://www.zhihu.com/question/270415168/answer/360130655

answer : 404 : https://www.zhihu.com/question/270621469/answer/360327135

answer : 404 : https://www.zhihu.com/question/270415168/answer/361272841

answer : 404 : https://www.zhihu.com/question/270415168/answer/360139666

answer : 404 : https://www.zhihu.com/question/270621469/answer/360779666

POTENTIALLY CENSORED: 

answer : 404 : https://www.zhihu.com/question/271387092/answer/361160051
answer : 404 : https://www.zhihu.com/question/271279709/answer/360454377
answer : 404 : https://www.zhihu.com/question/271279709/answer/360329435
answer : 404 : https://www.zhihu.com/question/271279709/answer/360294327
question : 404 : https://www.zhihu.com/question/271387092
answer : 404 : https://www.zhihu.com/question/271387092/answer/361208287
answer : 404 : https://www.zhihu.com/question/271279709/answer/360476273
question : 404 : https://www.zhihu.com/question/271279709
question : 404 : https://www.zhihu.com/question/270415168
question : 404 : https://www.zhihu.com/question/270621469
answer : 404 : https://www.zhihu.com/question/270415168/answer/360139666
answer : 404 : https://www.zhihu.com/question/270621469/answer/360779666
answer : 404 : https://www.zhihu.com/question/270415168/answer/360451509
question : 404 : https://www.zhihu.com/question/270415168
answer : 404 : https://www.zhihu.com/question/270415168/answer/359825126
question : 404 : https://www.zhihu.com/question/270621469
answer : 404 : https://www.zhihu.com/question/270621469/answer/360981750
answer : 404 : https://www.zhihu.com/question/270415168/answer/360528557
answer : 404 : https://www.zhihu.com/question/270415168/answer/360531602
answer : 404 : https://www.zhihu.com/question/270415168/answer/360585851
answer : 404 : https://www.zhihu.com/question/270415168/answer/360130655
answer : 404 : https://www.zhihu.com/question/270621469/answer/360327135
answer : 404 : https://www.zhihu.com/question/270415168/answer/361272841
answer : 404 : https://www.zhihu.com/question/270415168/answer/360139666
answer : 404 : https://www.zhihu.com/question/270621469/answer/360779666
answer : 404 : https://www.zhihu.com/question/270415168/answer/360451509
question : 404 : https://www.zhihu.com/question/270415168
article : 404 : https://zhuanlan.zhihu.com/p/35373185
answer : 404 : https://www.zhihu.com/question/270415168/answer/359825126
question : 404 : https://www.zhihu.com/question/270621469
answer : 404 : https://www.zhihu.com/question/270621469/answer/360981750
answer : 404 : https://www.zhihu.com/question/270415168/answer/360528557
answer : 404 : https://www.zhihu.com/question/270415168/answer/360531602
answer : 404 : https://www.zhihu.com/question/270415168/answer/360585851
answer : 404 : https://www.zhihu.com/question/270415168/answer/360130655
answer : 404 : https://www.zhihu.com/question/270621469/answer/360327135
answer : 404 : https://www.zhihu.com/question/270415168/answer/361272841
answer : 404 : https://www.zhihu.com/question/270415168/answer/360139666
answer : 404 : https://www.zhihu.com/question/270621469/answer/360779666

